--- a/report.html
+++ b/report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="report.css">
+    <link rel="stylesheet" type="text/css" href="/styles/css/report.css">
     <style>
       body {
         font-family: 'Arial', sans-serif;
@@ -102,7 +102,7 @@
       </div>
     </div>
     <button id="download">Generate PDF</button>
-    <script src="report.js"></script>
+    <script src="/java/report.js"></script>
     <script>
       window.onload = function () {
         document.getElementById('download').addEventListener('click', function () {
