--- a/calculator.html
+++ b/calculator.html
@@ -3,14 +3,14 @@
 
 <head>
   <title>Lumen Calculator</title>
-  <link rel="stylesheet" href="calculator.css">
+  <link rel="stylesheet" href="/styles/css/calculator.css">
   </head>
 
 <body>
   <header>
     <div class="header-content">
       <div class="title-container">
-        <img src="Logo.png" alt="Company Logo" id="logo">
+        <img src="/styles/image/Logo.png" alt="Company Logo" id="logo">
         <div class="header-text">
           <h1>ROKN AL WAHDA</h1>
           <p>Your Lighting Solution Experts</p>
@@ -70,7 +70,7 @@
   </div>
   <!-- Report Button -->
   <button id="report">Generate Report</button>
-  <script src="calculator.js"></script>
+  <script src="/java/calculator.js"></script>
 
 </body>
 
