--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles/css/styles.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
   <header>
     <div class="header-content">
       <div class="title-container">
-        <img src="Logo.png" alt="Company Logo" id="logo">
+        <img src="/styles/image/Logo.png" alt="Company Logo" id="logo">
         <div class="header-text">
           <h1>ROKN AL WAHDA</h1>
           <p>Your Lighting Solution Experts</p>
@@ -49,8 +49,8 @@
       </div>
       <div class="background-image"></div>
       <div class="image-container">
-        <img src="dialu.jpg" alt="Dialu Image" class="image">
-        <img src="cad.jpg" alt="Dialu Image" class="image">
+        <img src="/styles/image/dialu.jpg" alt="Dialu Image" class="image">
+        <img src="/styles/image/cad.jpg" alt="Dialu Image" class="image">
 
       </div>
 
@@ -69,7 +69,7 @@
       </div>
       <h2>Try Our Lighting Calculator for Free</h2>
       <div class="button-container">
-        <a href="calculator.html" class="myButton">Lighting Calculator</a>
+        <a href="/calculator.html" class="myButton">Lighting Calculator</a>
 
       </div>
 
