--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,159 @@
 <head>
   <title>Lumen Calculator</title>
   <link rel="stylesheet" href="/styles/css/calculator.css">
-  </head>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      color: #333;
+      line-height: 1.6;
+      padding: 20px;
+    }
+
+    header {
+      background-color: var(--color-secondary);
+      height: var(--header-height);
+      padding: 20px;
+    }
+
+    .header-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .title-container {
+      display: flex;
+      align-items: center;
+    }
+
+    #logo {
+      width: 80px;
+      height: auto;
+      margin-right: 10px;
+    }
+
+    header h1 {
+      color: var(--color-primary);
+      font-weight: 500;
+      margin: 15px 0 0;
+      font-size: 2rem;
+    }
+
+    header p {
+      color: var(--color-primary);
+      font-weight: 200;
+      margin: 5px 0 0;
+      font-size: 1.5rem;
+    }
+
+    h1 {
+      font-size: 2.2em;
+      font-weight: bold;
+      color: #444;
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #444;
+      margin-top: 40px;
+    }
+
+    hr {
+      border: none;
+      border-bottom: 1px solid #ddd;
+    }
+
+    input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 16px;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    #results {
+      margin-top: 40px;
+    }
+
+    #results h2 {
+      margin-top: 0;
+    }
+
+    #total-required-luminaires,
+    #total-consumption,
+    #lumen-per-sqm {
+      margin-bottom: 20px;
+      font-size: 18px;
+    }
+
+    @media screen and (max-width: 768px) {
+      .header-content {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .title-container {
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      header h1,
+      header p {
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 1.8em;
+      }
+
+      h2 {
+        font-size: 1.5em;
+      }
+
+      input[type="number"] {
+        font-size: 14px;
+      }
+
+      button {
+        font-size: 16px;
+      }
+
+      #results {
+        margin-top: 20px;
+      }
+
+      #total-required-luminaires,
+      #total-consumption,
+      #lumen-per-sqm {
+        font-size: 16px;
+      }
+    }
+  </style>
+</head>
 
 <body>
   <header>
@@ -16,6 +168,7 @@
           <p>Your Lighting Solution Experts</p>
         </div>
       </div>
+    </div>
   </header>
 
   <h1>Lumen Calculator</h1>
@@ -51,7 +204,7 @@
   </div>
 
   <div id="lux">
-    <h2>Required Lux </h2>
+    <h2>Required Lux</h2>
     <div class="input-group">
       <label for="required-lux-level">Required Lux Level</label>
       <input type="number" id="required-lux-level" placeholder="Enter the required lux level">
@@ -61,6 +214,7 @@
   <!-- Calculation Button -->
   <button id="calculate">Calculate</button>
 
+ 
   <!-- Results Section -->
   <div id="results">
     <h2>Results</h2>
@@ -68,10 +222,11 @@
     <div id="total-consumption"></div>
     <div id="lumen-per-sqm"></div>
   </div>
+
   <!-- Report Button -->
   <button id="report">Generate Report</button>
-  <script src="/java/calculator.js"></script>
 
+  <script src="/java/calculator.js"></script>
 </body>
 
 </html>
