--- a/report.html
+++ b/report.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/styles/css/report.css">
     <style>
       body {
@@ -66,6 +67,36 @@
 
       button#download:hover {
         background-color: #45a049;
+      }
+
+      /* Mobile styles */
+      @media (max-width: 767px) {
+        #report {
+          padding: 10px;
+        }
+
+        h1 {
+          font-size: 1.8em;
+          margin-bottom: 10px;
+        }
+
+        h2 {
+          font-size: 1.4em;
+          margin-top: 20px;
+        }
+
+        table {
+          font-size: 14px;
+        }
+
+        td {
+          padding: 5px;
+        }
+
+        button#download {
+          font-size: 14px;
+          padding: 8px 16px;
+        }
       }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
