--- a/calculator.html
+++ b/calculator.html
@@ -51,17 +51,17 @@
     }
 
     h1 {
-      font-size: 2.2em;
+      
       font-weight: bold;
-      color: #444;
       margin-bottom: 20px;
       padding-bottom: 10px;
+      color: #ffffff;
     }
 
     h2 {
       font-size: 1.8em;
       font-weight: bold;
-      color: #444;
+      color: #ffffff;
       margin-top: 40px;
     }
 
@@ -130,7 +130,7 @@
       }
 
       h1 {
-        font-size: 1.8em;
+        font-size: 3em;
       }
 
       h2 {
