--- a/report.html
+++ b/report.html
@@ -9,14 +9,18 @@
         color: #333;
         line-height: 1.6;
         padding: 20px;
+        display: contents;
+
       }
 
       #report {
         margin: 0 auto;
         max-width: 800px;
-        background: #fff;
+        background: #fcf8f8;
         padding: 20px 40px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        display: contents;
+        
       }
 
       h1 {
@@ -41,18 +45,35 @@
       }
 
       table {
-        width: 100%;
-      }
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 
-      td {
-        vertical-align: top;
-        padding: 10px;
-      }
-      
-      p {
-        margin: 0;
-        margin-bottom: 10px;
-      }
+td {
+  vertical-align: top;
+  padding: 10px;
+  width: calc(50% - 20px);
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+p {
+  margin: 0;
+  margin-bottom: 10px;
+  line-height: 1.5;
+}
+
+/* Optional: Add some background color or border to the table cells for visual appeal */
+td {
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 
       button#download {
         font-size: 1em;
