--- a/calculator.html
+++ b/calculator.html
@@ -96,6 +96,13 @@
         </select>
       </div>
       <div class="input-group">
+        <label for="luminaire-shape">Shape</label>
+        <select id="luminaire-shape">
+          <option value="circular">Circular</option>
+          <option value="rectangular">Rectanglar</option>
+        </select>
+      </div>
+      <div class="input-group">
         <label for="luminaire-brand">Brand</label>
         <select id="luminaire-brand">
         </select>
