--- a/calculator.html
+++ b/calculator.html
@@ -138,18 +138,18 @@
   </div>
   <button id="report">Generate Report</button>
   <footer>
-    <p class="disclaimer">Please note that the lux level calculated based on these inputs provides an approximate
+    <p class="disclaimer" id="disclaimer">Please note that the lux level calculated based on these inputs provides an
+      approximate
       estimation and may not account for all possible factors and variations. For accurate and detailed lighting
       calculations, it is highly recommended to consult qualified lighting professionals or engineers who can
-      consider
-      additional factors and utilize advanced lighting design software. The calculated lux level should be used as a
-      general guideline and not as a substitute for professional advice. The developers of this application shall
-      not
-      be
-      held liable for any inaccuracies, damages, or losses resulting from the use or reliance on the lux level
-      calculations provided.</p>
-
+      consider additional factors and utilize advanced lighting design software. The calculated lux level should be used
+      as a
+      general guideline and not as a substitute for professional advice. The developers of this application shall not
+      be held liable for any inaccuracies, damages, or losses resulting from the use or reliance on the lux level
+      calculations provided. <a href="#" id="disclaimer-link">Read more</a></p>
   </footer>
+
+
   <script src="/java/calculator.js"></script>
   <script src="/java/brand.js"></script>
   <script src="/java/pickr.js"></script>
