--- a/calculator.html
+++ b/calculator.html
@@ -4,6 +4,7 @@
 <head>
   <title>Lumen Calculator</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
   <!-- Include Spectrum JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
@@ -67,15 +68,15 @@
     <div class="grid-container">
       <div class="input-group">
         <label for="luminaire-lumen">Lumen</label>
-        <input type="number" id="luminaire-lumen" placeholder="in lm" style="width: 90%">
+        <input type="number" id="luminaire-lumen" placeholder="in lm">
       </div>
       <div class="input-group">
         <label for="luminaire-wattage">Power</label>
-        <input type="number" id="luminaire-wattage" placeholder="in W" style="width: 90%">
+        <input type="number" id="luminaire-wattage" placeholder="in W">
       </div>
       <div class="input-group">
         <label for="luminaire-voltage">Voltage</label>
-        <input type="number" id="luminaire-voltage" placeholder="in V" style="width: 90%">
+        <input type="number" id="luminaire-voltage" placeholder="in V">
       </div>
       <div class="input-group">
         <label for="luminaire-mounting">Mounting</label>
@@ -117,42 +118,78 @@
         <select id="luminaire-model">
         </select>
       </div>
+
+      <div class="input-group">
+        <h2>Target Lux Level</h2>
+        <input type="number" id="required-lux-level" placeholder="Enter the target lux level">
+        <div id="results">
+          <button id="calculate">Calculate</button>
+        </div>
+        <div id="total-required-luminaires">
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Output Section -->
   <div id="lux">
-    <h2>Required Lux</h2>
-    <div class="grid-container">
-      <div class="input-group">
-        <label for="required-lux-level">Required Lux Level</label>
-        <input type="number" id="required-lux-level" placeholder="Enter the target lux level" style="width: 100%">
-      </div>
-
-      <div id="total-required-luminaires">
-        <div id="results">
-          <button id="calculate">Calculate</button>
-        </div>
-      </div>
-    </div>
+    <div id="svg-container"></div>
+    <button id="report">Generate Report</button>
   </div>
-  <button id="report">Generate Report</button>
-  <footer>
-    <p class="disclaimer" id="disclaimer">Please note that the lux level calculated based on these inputs provides an
-      approximate
-      estimation and may not account for all possible factors and variations. For accurate and detailed lighting
-      calculations, it is highly recommended to consult qualified lighting professionals or engineers who can
-      consider additional factors and utilize advanced lighting design software. The calculated lux level should be used
-      as a
-      general guideline and not as a substitute for professional advice. The developers of this application shall not
-      be held liable for any inaccuracies, damages, or losses resulting from the use or reliance on the lux level
-      calculations provided. <a href="#" id="disclaimer-link">Read more</a></p>
-  </footer>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script>
+    var svg = d3.select("#svg-container")
+      .attr("width", '100%')
+      .attr("height", '100%')
+      .attr("viewBox", "0 0 200 200"); // adjust this as per your needs
+
+  </script>
+  <script src="/java/d3.js"></script>
+
+</html>
 
 
-  <script src="/java/calculator.js"></script>
-  <script src="/java/brand.js"></script>
-  <script src="/java/pickr.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+  <p class="disclaimer" id="disclaimer">Please note that the lux level calculated based on these inputs provides an
+    approximate
+    estimation and may not account for all possible factors and variations. For accurate and detailed lighting
+    calculations, it is highly recommended to consult qualified lighting professionals or engineers who can
+    consider additional factors and utilize advanced lighting design software. The calculated lux level should be used
+    as a
+    general guideline and not as a substitute for professional advice. The developers of this application shall not
+    be held liable for any inaccuracies, damages, or losses resulting from the use or reliance on the lux level
+    calculations provided. <a href="#" id="disclaimer-link">Read more</a></p>
+</footer>
+
+
+<script src="/java/calculator.js"></script>
+<script src="/java/brand.js"></script>
+<script src="/java/pickr.js"></script>
 </body>
 
 </html>
