--- a/calculator.html
+++ b/calculator.html
@@ -18,7 +18,7 @@
   <header>
     <div class="header-content">
       <div class="title-container">
-        <img src="/styles/image/Logo.png" alt="Company Logo" id="logo">
+        <img src="/styles/image/evalog.png" alt="Company Logo" id="logo">
         <div class="header-text">
           <h1>EVALux</h1>
           <p>Simple Lux Calculation Tool</p>
