--- a/calculator.html
+++ b/calculator.html
@@ -6,10 +6,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
-  <!-- Include Spectrum JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
-  <!-- Include color-picker.js -->
-  <script src="/java/pickr.js"></script>
 
   <link rel="stylesheet" href="/styles/css/calculator.css">
 </head>
@@ -132,64 +129,15 @@
   </div>
 
   <!-- Output Section -->
+
   <div id="lux">
-    <div id="svg-container"></div>
-    <button id="report">Generate Report</button>
+    <div id="renderer-container"></div>
+    <script type="module">
+      import * as THREE from 'https://threejs.org/build/three.module.js';
+      import '/java/three.js';
+    </script>
   </div>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script>
-    var svg = d3.select("#svg-container")
-      .attr("width", '100%')
-      .attr("height", '100%')
-      .attr("viewBox", "0 0 300 300"); // adjust this as per your needs
-
-  </script>
-  <script src="/java/d3.js"></script>
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer>
-  <p class="disclaimer" id="disclaimer">Please note that the lux level calculated based on these inputs provides an
-    approximate
-    estimation and may not account for all possible factors and variations. For accurate and detailed lighting
-    calculations, it is highly recommended to consult qualified lighting professionals or engineers who can
-    consider additional factors and utilize advanced lighting design software. The calculated lux level should be used
-    as a
-    general guideline and not as a substitute for professional advice. The developers of this application shall not
-    be held liable for any inaccuracies, damages, or losses resulting from the use or reliance on the lux level
-    calculations provided. <a href="#" id="disclaimer-link">Read more</a></p>
-</footer>
-
-
-<script src="/java/calculator.js"></script>
-<script src="/java/brand.js"></script>
-<script src="/java/pickr.js"></script>
+  <button id="report">Generate Report</button>
 </body>
 
 </html>
