--- a/report.html
+++ b/report.html
@@ -107,7 +107,7 @@
     <h3>Saved Rooms</h3>
     <!-- Saved rooms will be dynamically added here by JavaScript -->
     <input type="file" accept="image/*" capture="camera" id="cameraInput" style="display: none;">
-    <img id="cameraIcon" src="/styles/image/camico.png" style="width: 24px; height: 24px;">
+    <img id="cameraIcon;">
   </aside>
 
   <button id="calculate">Calculate</button>
