--- a/report.html
+++ b/report.html
@@ -55,16 +55,11 @@
         <input type="number" id="edit-room-width">
         <label for="edit-room-height">Height</label>
         <input type="number" id="edit-room-height">
-        <button id="edit-room">Edit Room</button>
+        <label for="illumination">Target Lux</label>
+        <input type="number" id="illumination" placeholder="in lux">
+        <button id="edit-room">Save</button>
       </div>
     </div>
-  </div>
-
-
-  <!-- Target Lux selection section -->
-  <div class="input-group">
-    <label for="illumination">Target Lux</label>
-    <input type="number" id="illumination" placeholder="in lux">
   </div>
 
   <!-- Luminaire selection section -->
