--- a/report.html
+++ b/report.html
@@ -40,8 +40,6 @@
     <button id="save-room">Add Rooms</button>
     <aside id="saved-rooms" class="sidebar">
       <!-- Saved rooms will be dynamically added here by JavaScript -->
-      <input type="file" accept="image/*" capture="camera" id="cameraInput" style="display: none;">
-      <img id="cameraIcon;">
     </aside>
     <!-- The Modal -->
     <div id="modal" style="display: none;">
@@ -55,26 +53,34 @@
         <input type="number" id="edit-room-width">
         <label for="edit-room-height">Height</label>
         <input type="number" id="edit-room-height">
+        <!-- Luminaire selection section -->
+        <div class="dropdown-brand">
+          <button class="dropdown-button">Select a brand</button>
+          <div class="dropdown-content">
+            <!-- Items will be generated here -->
+          </div>
+        </div>
+        <div class="dropdown-model">
+          <button class="dropdown-button">Select a Model</button>
+          <div class="dropdown-content">
+            <!-- Items will be generated here -->
+          </div>
+        </div>
         <label for="illumination">Target Lux</label>
         <input type="number" id="illumination" placeholder="in lux">
+        <div id="button-container">
+          <button id="arrangment">Luminaires Arrangment</button>
+          <button id="place">Place Luminaires</button>
+        </div>
+        <input type="file" accept="image/*" capture="camera" id="cameraInput" style="display: block;">
+        <img id="cameraIcon;" src="/styles/image/camico.png">
         <button id="edit-room">Save</button>
+        <button id="delete-room">Delete</button>
       </div>
     </div>
   </div>
 
-  <!-- Luminaire selection section -->
-  <div class="dropdown-brand">
-    <button class="dropdown-button">Select a brand</button>
-    <div class="dropdown-content">
-      <!-- Items will be generated here -->
-    </div>
-  </div>
-  <div class="dropdown-model">
-    <button class="dropdown-button">Select a Model</button>
-    <div class="dropdown-content">
-      <!-- Items will be generated here -->
-    </div>
-  </div>
+
 
   <!-- SVG section -->
   <div id="lux">
@@ -86,10 +92,6 @@
 
   <!-- Suggest Section -->
   <div id="suggest">
-    <div id="button-container">
-      <button id="arrangment">Luminaires Arrangment</button>
-      <button id="place">Place Luminaires</button>
-    </div>
     <table>
       <tr>
         <td id="row">0</td>
@@ -105,7 +107,7 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="/java/luminaireplacer.js"></script>
   <script src="/java/d3.js"></script>
-  <script src="/java/save-room.js"></script>  
+  <script src="/java/save-room.js"></script>
   <script src="/java/camera.js"></script>
 
 </body>
