--- a/report.html
+++ b/report.html
@@ -66,21 +66,25 @@
             <!-- Items will be generated here -->
           </div>
         </div>
-        <label for="illumination">Target Lux</label>
-        <input type="number" id="illumination" placeholder="in lux">
+        <label for="illumination">Target Lux
+          <input type="number" id="illumination" placeholder="in lux">
+        </label>
         <div id="button-container">
           <button id="arrangment">Luminaires Arrangment</button>
           <button id="place">Place Luminaires</button>
         </div>
-        <input type="file" accept="image/*" capture="camera" id="cameraInput" style="display: block;">
-        <img id="cameraIcon;" src="/styles/image/camico.png">
-        <button id="edit-room">Save</button>
-        <button id="delete-room">Delete</button>
+        <div class="custom-file-upload">
+          <input type="file" accept="image/*" capture="camera" id="cameraInput" style="display: none;">
+          <button id="custom-button">Upload Image</button>
+          <span id="custom-text">No file chosen, yet.</span>
+        </div>
+        <div>
+          <button id="edit-room">Save</button>
+          <button id="delete-room">Delete</button>
+        </div>
       </div>
     </div>
   </div>
-
-
 
   <!-- SVG section -->
   <div id="lux">
@@ -100,7 +104,7 @@
     </table>
   </div>
 
-  <button id="calculate">Calculate</button>
+  <button id="calculate">Prepare Estimate</button>
   <button id="save-project">Save Project</button>
 
   <script src="/java/brand.js"></script>
