--- a/report.html
+++ b/report.html
@@ -38,9 +38,9 @@
 
   <div id="room-creation">
     <button id="save-room">Add Rooms</button>
-    <aside id="saved-rooms" class="sidebar">
+    <div id="saved-rooms" class="sidebar">
       <!-- Saved rooms will be dynamically added here by JavaScript -->
-    </aside>
+    </div>
     <!-- The Modal -->
     <div id="modal" style="display: none;">
       <!-- Modal content -->
@@ -107,7 +107,7 @@
   <script src="/java/save-room.js"></script>
   <script src="/java/brand.js"></script>
   <script src="/java/luminaireplacer.js"></script>
-  <script src="/java/d3.js"></script>
+  <script src="/java/svg.js"></script>
   <script src="/java/camera.js"></script>
 
 </body>
