--- a/report.html
+++ b/report.html
@@ -55,6 +55,7 @@
         <input type="number" id="edit-room-height">
         <label for="illumination">Target Lux</label>
         <input type="number" id="illumination" placeholder="in lux">
+        <label for="edit-room-brand">Brand</label>
       </div>
       <!-- Luminaire selection section -->
       <div class="dropdown">
