--- a/report.html
+++ b/report.html
@@ -110,6 +110,9 @@
   <script src="/java/luminaireplacer.js"></script>
   <script src="/java/svg.js"></script>
   <script src="/java/camera.js"></script>
+  <script src="/data/brand.json"></script>
+  <script src="/data/alif.json"></script>
+  <script src="/data/pimcat.json"></script>
 
 </body>
 
