--- a/report.html
+++ b/report.html
@@ -67,9 +67,9 @@
           <!-- Model Items will be generated here once a brand is selected -->
         </div>
       </div>
-      <div id="button-container">
-        <button id="arrangment">Luminaires Arrangment</button>
+      <div id="button-container">        
         <button id="place">Place Luminaires</button>
+        <button id="arrangment">Luminaires Arrangment</button>
       </div>
       <div class="custom-file-upload">
         <input type="file" accept="image/*" capture="camera" id="cameraInput" style="display: none;">
@@ -105,8 +105,9 @@
   <button id="calculate">Prepare Estimate</button>
   <button id="save-project">Save Project</button>
 
-  <script src="/java/save-room.js"></script>
+   <!-- Java Script Section -->
   <script src="/java/brand.js"></script>
+  <script src="/java/save-room.js"></script>
   <script src="/java/luminaireplacer.js"></script>
   <script src="/java/svg.js"></script>
   <script src="/java/camera.js"></script>
